Fixed HTML overflow

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -25,7 +25,6 @@ html {
   height: 100%;
   background-color: $background;
   color: $color;
-  overflow: hidden;
 
   body {
     font-size: 1.6em;
